Closed
Bug 654645
Opened 14 years ago
Closed 14 years ago
Attachment size is not displayed in compose window in case of "Send To" -> "Mail Recipient" from Windows Explorer
Categories
(Thunderbird :: Message Compose Window, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 5.0b1
People
(Reporter: dfghjkjhg, Assigned: squib)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
591 bytes,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0.1) Gecko/20100101 Firefox/4.0.1
Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:5.0a2) Gecko/20110503 Thunderbird/3.3a4pre
Attachment size is not displayed in compose window in case of "Send To" -> "Mail Recipient" from Windows Explorer
Reproducible: Always
Steps to Reproduce:
1. Open Windows Explorer
2. right click a file
3. chose "send to" --> "mail recipient"
4. TB compose window opens with file attached, but sile size is not displayed
Updated•14 years ago
|
Blocks: attachUXtracker
Assignee | ||
Comment 1•14 years ago
|
||
Confirmed. I think I know what the problem is. Let's see if I can fix this without having Windows builds set up. If nothing else, this is an excuse for me to learn the TryChooser. :)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 2•14 years ago
|
||
This should fix it. Try build located here: <http://bit.ly/jcKnLi>. No tests, since I don't think "send to" is tested in the first place...
Bienvenu, I flagged you for review since I seem to recall you having a Windows machine. If not, feel free to move this to someone else.
Assignee: nobody → squibblyflabbetydoo
Status: NEW → ASSIGNED
Attachment #530793 -
Flags: review?(dbienvenu)
Comment 3•14 years ago
|
||
yes, I think I can dig up a windows machine somewhere in my office :-)
Comment 4•14 years ago
|
||
https://developer.mozilla.org/index.php?title=en/Thunderbird/Using_MAPI_with_Thunderbird%27s_Windows_7_developer_builds is extremely help for getting your own build to be invoked
Updated•14 years ago
|
Attachment #530793 -
Flags: review?(dbienvenu) → review+
Assignee | ||
Comment 5•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a4
You need to log in
before you can comment on or make changes to this bug.
Description
•