Bug 654645 - Attachment size is not displayed in compose window in case of "Send To" -> "Mail Recipient" from Windows Explorer; r=bienvenu